[package]
name = "pk-crypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
encoding = "0.2.33"
hex = "0.4.3"
zip = {version = "0.6.5", features = ["deflate"] }
